# vidurai

./: .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  BRAND.md  CHANGELOG.md  CONTRIBUTING.md  DAEMON_SQL_BRIDGE_IMPLEMENTATION.md  Dockerfile.daemon  INTEGRATION_ROADMAP_COMPLETE.md  README.md  SEMANTIC_CONSOLIDATION_IMPLEMENTATION.md  SF_V2_IMPLEMENTATION_COMPLETE.md  SF_V2_INTEGRATION_GUIDE.md  VIDURAI_FULL_AUDIT_REPORT.md  VIDURAI_PROJECT_STATUS.json  active_context.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  setup.py  start_qa_daemon.sh  test_daemon_watch.txt  test_forgetting.py  test_intelligent_decay.py  test_pickle_serialization.py  test_rl_integration.py  test_vidurai.py  test_vismriti_phase1_2.py  verify_bug1_direct.py  verify_bug1_fix.py  verify_bug2_fix.py  verify_bug3_fix.py
docs/: CLI.md  CLI_REFERENCE.md  DAEMON.md  MAINTENANCE_MODE.md  MCP_SERVER.md  RELEASE_CHECKLIST_v2.0.0.md  ROADMAP.md  SDK.md  SECURITY.md  TROUBLESHOOTING.md  VSCODE_EXTENSION.md
research/: VIDURAI_RESEARCH.md
scripts/: README.md  audit_docs.py  doc_gen.py  install.sh  migrate_guardian_v2_1.py  release_docker.sh  release_pypi.sh  scan_content.py  start-mcp-server  stop-mcp-server  verify_commands.py  verify_lifecycle.py  verify_speed.py  vidurai-claude
tests/: conftest.py  test_aggregation.py  test_audience_gists_storage.py  test_auto_memory_policy.py  test_cli_audience.py  test_consolidation.py  test_daemon_sql_bridge.py  test_entity_extractor.py  test_episode_builder.py  test_event_bus.py  test_event_source_integration.py  test_hint_delivery.py  test_mcp_live.py  test_memory_role_classifier.py  (+9 more)
(+131 files in other folders)
